# inclui_aqui_server

./: .gitignore  README.md  pyproject.toml
inclui_aqui_server/: app.py
inclui_aqui_server/api/: dependencies.py
inclui_aqui_server/api/v1/: api.py
inclui_aqui_server/api/v1/endpoints/: auth_user.py
inclui_aqui_server/core/: __init__.py  config.py  exception.py  security.py
inclui_aqui_server/crud/: user.py
inclui_aqui_server/db/: database.py
inclui_aqui_server/db/models/: __init__.py  accessibility_criteria_model.py  ai_feedback_log_model.py  badge_model.py  comment_model.py  establishment_image_model.py  establishment_model.py  moderation_log_model.py  review_image_model.py  review_model.py  suggestion_model.py  user_model.py  user_search_history_model.py
inclui_aqui_server/db/schemas/: __init__.py  response_schema.py  user_schema.py
inclui_aqui_server/services/: User.py  user.py
