[project]
name = "inclui_aqui_server"
version = "0.1.0"
description = ""
authors = [
    {name = "Railan Santana",email = "lansilvah14fsa@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.13,<4.0"
dependencies = [
    "fastapi[standard] (>=0.115.12,<0.116.0)",
    "pydantic[email] (>=2.11.5,<3.0.0)",
    "sqlalchemy[asyncio] (>=2.0.41,<3.0.0)",
    "pydantic-settings (>=2.9.1,<3.0.0)",
    "alembic (>=1.16.1,<2.0.0)",
    "asyncpg (>=0.30.0,<0.31.0)",
    "psycopg2-binary (>=2.9.10,<3.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"


[tool.poetry.group.dev.dependencies]
pytest = "^8.4.0"
pytest-cov = "^6.2.0"
taskipy = "^1.14.1"
ruff = "^0.11.13"

[tool.ruff]
line-length = 89
extend-exclude = ['migrations']

[tool.ruff.lint]
preview = true
select = ['I', 'F', 'E', 'W', 'PL', 'PT']
# Ignore these codes _project-wide_ (you can remove E501 if you’d rather wrap lines)
ignore = ["E501", "PLC0414"]

[tool.ruff.lint.per-file-ignores]
# core/__init__.py: unused import of Settings
"inclui_aqui_server/core/__init__.py" = ["F401"]
# schemas/__init__.py: unused imports
"inclui_aqui_server/db/schemas/__init__.py" = ["F401"]
# all your SQLAlchemy forward-refs in models
"inclui_aqui_server/db/models/*.py"      = ["F821"]

[tool.ruff.format]
preview = true
quote-style = 'single'

[tool.pytest.ini_options]
pythonpath = "."
addopts = '-p no:warnings'

[tool.taskipy.tasks]
lint = 'ruff check'
pre_format = 'ruff check --fix'
format = 'task pre_format && ruff format'
run = 'fastapi dev inclui_aqui_server/app.py'
pre_test = 'task lint'
post_test = 'coverage html'
test = 'pytest -s -x --cov=inclui_aqui_server  -vv && task post_test'